--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.0.0",
-        "axios": "^0.19",
+        "@babel/preset-react": "^7.10.4",
+        "axios": "^0.19.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
-        "react": "^16.2.0",
+        "react": "^16.13.1",
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass": "^1.26.11",
+        "sass-loader": "^8.0.2"
     },
     "dependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.10.4"
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1"
     }
 }
