--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 services:
   # Laravel Service
-  application:
-    container_name: product-listing-challenge
+  fpm-service:
+    container_name: fpm-service
     restart: always
     tty: true
     working_dir: /var/www/app
@@ -15,9 +15,9 @@ services:
       - product-listing-network
 
   # Nginx Service
-  server:
+  app-server:
     image: nginx:alpine
-    container_name: application-server
+    container_name: app-server
     restart: always
     tty: true
     ports:
@@ -27,7 +27,7 @@ services:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
     working_dir: /var/www
     depends_on:
-      - application
+      - fpm-service
     networks:
       - product-listing-network
 
